--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@tsconfig/react-native/tsconfig.json",
   "compilerOptions": {
-    "typeRoots": ["src/types"]
+    // "typeRoots": ["src/types"],
+    "types": ["jest"],
+    "lib": ["ES2022"]
   }
 }
