--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-screens": "^3.20.0",
+    "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "swr": "^2.1.0",
     "zustand": "^4.3.6"
   },
   "devDependencies": {
