--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "^0.72.3",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-gradle-plugin": "^0.71.19",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-orientation-locker": "^1.5.0",
     "react-native-paper": "^5.3.1",
@@ -25,13 +26,14 @@
     "react-native-screens": "^3.20.0",
     "react-native-tts": "^4.1.0",
     "react-native-vector-icons": "^9.2.0",
-    "zustand": "^4.3.6"
+    "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
+    "@react-native/metro-config": "^0.74.0",
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
